crates/paws_domain/src/transformer/snapshots/paws_domain__transformer__set_model__tests__set_model_only_affects_user_messages.snap
---
source: crates/paws_domain/src/transformer/set_model.rs
expression: snapshot
---
transformation: SetModel(gpt-4)_user_only
before:
  messages:
    - text:
        role: System
        content: System message
    - text:
        role: Assistant
        content: Assistant message
    - text:
        role: User
        content: User message
after:
  messages:
    - text:
        role: System
        content: System message
    - text:
        role: Assistant
        content: Assistant message
    - text:
        role: User
        content: User message
        model: gpt-4
